<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.00"
            android:background="@color/colorPrimary">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/currency_from_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/currency_from_image"
                        android:layout_width="42dp"
                        android:layout_height="30dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="24dp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/currency_from_image"
                        android:layout_marginLeft="29dp"
                        android:layout_marginStart="29dp"
                        android:layout_toEndOf="@+id/currency_from_image"
                        android:layout_toRightOf="@+id/currency_from_image"
                        android:text="@string/from"
                        android:textColor="@color/colorButtonsBackground"
                        android:textSize="14sp"
                        tools:text="From" />

                    <TextView
                        android:id="@+id/currency_from_char_num_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/textView2"
                        android:layout_alignStart="@+id/textView2"
                        android:layout_below="@+id/textView2"
                        android:layout_marginTop="13dp"
                        android:textColor="@color/colorButtonsBackground"
                        android:textSize="23sp"
                        tools:text="RUB" />

                    <TextView
                        android:id="@+id/currency_from_quantity_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="1000"

                        android:layout_marginRight="47dp"
                        android:layout_marginEnd="47dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/colorButtonsBackground"
                        android:textSize="23sp"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/currency_to_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/currency_to_image"
                        android:layout_width="42dp"
                        android:layout_height="30dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="24dp"/>
                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/currency_to_image"
                        android:layout_marginLeft="29dp"
                        android:layout_marginStart="29dp"
                        android:layout_toEndOf="@+id/currency_to_image"
                        android:layout_toRightOf="@+id/currency_to_image"
                        android:text="@string/to"
                        android:textColor="@color/colorButtonsBackground"
                        android:textSize="14sp"
                        tools:text="To" />

                    <TextView
                        android:id="@+id/currency_to_char_num_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/textView3"
                        android:layout_alignStart="@+id/textView3"
                        android:layout_below="@+id/textView3"
                        android:layout_marginTop="13dp"
                        android:textColor="@color/colorButtonsBackground"
                        android:textSize="23sp"
                        tools:text="RUB" />

                    <TextView
                        android:id="@+id/currency_to_quantity_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="1000"

                        android:layout_marginRight="47dp"
                        android:layout_marginEnd="47dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/colorButtonsBackground"
                        android:textSize="23sp"/>


                </RelativeLayout>

            </LinearLayout>


            <android.support.design.widget.FloatingActionButton
                android:id="@+id/flip_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_flip"
                app:backgroundTint="@color/colorButtonsBackground" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"

            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorButtonsBackground"
                android:minHeight="80dp"
                android:text="@string/_7"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@color/colorButtonsText"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn_eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="@color/colorButtonsBackground"
                android:minHeight="80dp"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:text="@string/_8"
                android:textColor="@color/colorButtonsText"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn_nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@color/colorButtonsBackground"
                android:minHeight="80dp"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:text="@string/_9"
                android:textColor="@color/colorButtonsText"
                android:textSize="25sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorButtonsBackground"
                android:minHeight="80dp"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:text="@string/_4"
                android:textColor="@color/colorButtonsText"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="@color/colorButtonsBackground"
                android:minHeight="80dp"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:text="@string/_5"
                android:textColor="@color/colorButtonsText"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:background="@color/colorButtonsBackground"
                android:minHeight="80dp"
                android:text="@string/_6"
                android:textColor="@color/colorButtonsText"
                android:textSize="25sp" />

        </LinearLayout>

        //
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:background="@color/colorButtonsBackground"
                android:minHeight="80dp"
                android:text="@string/_1"
                android:textColor="@color/colorButtonsText"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="@color/colorButtonsBackground"
                android:minHeight="80dp"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:text="@string/_2"
                android:textColor="@color/colorButtonsText"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:background="@color/colorButtonsBackground"
                android:minHeight="80dp"
                android:text="@string/_3"
                android:textColor="@color/colorButtonsText"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorButtonsBackground"
                android:minHeight="80dp"
                android:text="@string/dot"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@color/colorButtonsText"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn_zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="@color/colorButtonsBackground"
                android:minHeight="80dp"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:text="@string/_0"
                android:textColor="@color/colorButtonsText"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:background="@color/colorButtonsBackground"
                android:minHeight="80dp"
                android:text="@string/ac"
                android:textColor="@color/colorButtonsText"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>